<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="picker_cancel">Cancel</string>
    <string name="picker_back">Back</string>
    <string name="picker_done">Done</string>
    <string name="picker_confirm">OK</string>
    <string name="picker_done_all">Done all</string>
    <string name="picker_title">Select files</string>
    <string name="picker_toggle_list">List</string>
    <string name="picker_toggle_grid">Grid</string>
    <string name="picker_preview">Preview</string>
    <string name="picker_take_photo">Photo</string>
    <string name="picker_record_video">Capture</string>
    <string name="picker_manage">Manage</string>
    <string name="picker_empty">No content</string>
    <string name="picker_loading">Loading…</string>
    <string name="picker_loading_files">Loading files…</string>
    <string name="picker_partial_access_hint">You\'ve allowed access to selected photos. Tap to change.</string>
    <string name="picker_no_media_permission">Media permission not granted</string>
    <string name="picker_media_permission_not_declared">Media permission not declared in AndroidManifest.xml</string>
    <string name="picker_camera_permission_required">Camera permission required to capture</string>
    <string name="picker_max_select">Select up to %1$d items</string>
    <string name="picker_over_limit">Exceeded the limit of %1$d items, please deselect others first</string>
    <string name="picker_done_count">Done(%1$d/%2$d)</string>
    <string name="picker_done_zero">Done(0)</string>
    <string name="picker_compress_progress">Compressing %1$d/%2$d</string>
    <string name="picker_compress_image_progress">Image %1$d/%2$d</string>
    <string name="picker_compress_video_progress">Video %1$d/%2$d</string>
    <string name="picker_compress_image_percent">Image %1$d%%</string>
    <string name="picker_compress_video_percent">Video %1$d%%</string>
    <string name="picker_crop_title">Edit image</string>
    <string name="picker_crop_rotate">Rotate</string>
    <string name="picker_crop_flip_h">Flip horizontally</string>
    <string name="picker_crop_flip_v">Flip vertically</string>
    <string name="picker_crop_reset">Reset</string>
    <string name="picker_crop_brush">Brush</string>
    <string name="picker_crop_eraser">Eraser</string>
    <string name="picker_crop_text">Text</string>
    <string name="picker_crop_mosaic">Mosaic</string>
    <string name="picker_crop_crop">Crop</string>
    <string name="picker_crop_text_hint">Enter text</string>
    <string name="picker_next">Next</string>
    <string name="picker_done_one">Done this one</string>
    <string name="picker_crop_failed">Crop failed</string>
    <string name="picker_crop_save_failed">Failed to save crop result</string>
    <string name="picker_camera_photo">Photo</string>
    <string name="picker_camera_video">Video</string>
    <string name="picker_camera_video_long_press">Hold to record</string>
    <string name="picker_camera_timer_zero">00:00</string>
    <string name="picker_camera_play">Play</string>
    <string name="picker_camera_pause_preview">Pause</string>
    <string name="picker_camera_flash_auto">Auto</string>
    <string name="picker_camera_flash_off">Flash off</string>
    <string name="picker_camera_torch_on">Torch on</string>
    <string name="picker_camera_torch_off">Torch off</string>
    <string name="picker_camera_switch">Flip</string>
    <string name="picker_camera_record">Record</string>
    <string name="picker_camera_stop">Stop</string>
    <string name="picker_camera_pause">Pause</string>
    <string name="picker_camera_resume">Resume</string>
    <string name="picker_camera_reset">Reset</string>
    <string name="picker_camera_retake_photo">Retake</string>
    <string name="picker_camera_retake">Re-record</string>
    <string name="picker_camera_done">Done</string>
    <string name="picker_camera_error">Camera unavailable</string>
    <string name="picker_video_permission_required">Camera and microphone permissions required to record</string>
    <string name="picker_footer_loading">Loading...</string>
    <string name="picker_footer_no_more">No more</string>
</resources>
